<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="@string/logs_header">

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="keepLogs"
            app:title="@string/keepLogs_title" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/administration_header">

        <EditTextPreference
            android:key="changePin"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/changePin_title" />

        <Preference
            android:key="resetLogins"
            android:summary="@string/globalLogout_summary"
            android:title="@string/globalLogout_title"/>

        <Preference
            android:key="resetDeviceButton"
            android:summary="@string/reset_summary"
            android:title="@string/reset_title"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/logout_header">

        <Preference
            android:key="logoutButton"
            android:summary="@string/logout_summary"
            android:title="@string/logout_title"/>

    </PreferenceCategory>

</PreferenceScreen>